--- a/assets/base.css
+++ b/assets/base.css
@@ -2886,19 +2886,27 @@ details-disclosure > details {
     overflow: auto;
   }
 }
-
+.text-blue-custom {
+  --tw-text-opacity: 1;
+  color: #202BCB;
+}
+.text-pink-custom {
+  --tw-text-opacity: 1;
+  color: #FF67CC;
+}
 .badge {
   border: 1px solid transparent;
   border-radius: var(--badge-corner-radius);
   display: inline-block;
   font-size: 1.2rem;
   letter-spacing: 0.1rem;
+  font-weight: 600;
   line-height: 1;
   padding: 0.5rem 1.3rem 0.6rem 1.3rem;
   text-align: center;
   background-color: rgb(var(--color-badge-background));
   border-color: rgba(var(--color-badge-border), var(--alpha-badge-border));
-  color: rgb(var(--color-badge-foreground));
+  /* color: rgb(var(--color-badge-foreground)); */
   word-break: break-word;
 }
 
