--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -42,7 +42,7 @@
   -%}
   <div class="card-wrapper product-card-wrapper underline-links-hover">
     <div
-      class="
+      class="p-1.5
         card card--{{ settings.card_style }}
         {% if card_product.featured_media %} card--media{% else %} card--text{% endif %}
         {% if settings.card_style == 'card' %} color-{{ settings.card_color_scheme }} gradient{% endif %}
@@ -132,7 +132,7 @@
               <a
                 href="{{ card_product.url }}"
                 id="StandardCardNoMediaLink-{{ section_id }}-{{ card_product.id }}"
-                class="full-unstyled-link"
+                class="full-unstyled-link capitalize  text-blue-custom text-3xl"
                 aria-labelledby="StandardCardNoMediaLink-{{ section_id }}-{{ card_product.id }} NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
               >
                 {{ card_product.title | escape }}
@@ -140,29 +140,37 @@
              
             </h3>
           </div>
-          <div class="card__badge {{ settings.badge_position }}">
-            {%- if card_product.available == false -%}
+          <div class="card__badge w-full flex justify-between {{ settings.badge_position }}">
+            {%for tag in card_product.tags %}
+
+            {%- if tag == "bestSeller" -%}
               <span
                 id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
-                class="badge badge--bottom-left color-{{ settings.sold_out_badge_color_scheme }}"
+                class=" badge--bottom-left text-blue-custom bg-yellow-50 badge font-semibold rounded-none border-none	"
               >
-                {{- 'products.product.sold_out' | t -}}
+                {{- 'products.product.Best_seller' | t -}}
               </span>
-            {%- elsif card_product.compare_at_price > card_product.price and card_product.available -%}
+              {%- elsif tag == "50% Off" -%}
               <span
                 id="NoMediaStandardBadge-{{ section_id }}-{{ card_product.id }}"
-                class="badge badge--bottom-left color-{{ settings.sale_badge_color_scheme }}"
+                class=" badge--bottom-left text-white bg-pink-500  badge"
               >
-                {{- 'products.product.on_sale' | t -}}
+                {{- 'products.product.50_off' | t -}}
               </span>
+              {%  else %}
+              <span></span>
             {%- endif -%}
+           
+          {% endfor %} {% if settings.wishlist_image %}
+            <img src="{{ settings.wishlist_image | img_url: '50x' }}" alt="Wishlist" class="wishlist-image w-8">
+          {% endif %}
           </div>
         </div>
       </div>
       <div class="card__content">
         <div class="card__information">
-          <h3
-            class="card__heading{% if card_product.featured_media or settings.card_style == 'standard' %} h5{% endif %}"
+          <h2
+            class=" flex flex-row justify-between card__heading{% if card_product.featured_media or settings.card_style == 'standard' %} h3{% endif %}"
             {% if card_product.featured_media or settings.card_style == 'card' %}
               id="title-{{ section_id }}-{{ card_product.id }}"
             {% endif %}
@@ -170,12 +178,13 @@
             <a
               href="{{ card_product.url }}"
               id="CardLink-{{ section_id }}-{{ card_product.id }}"
-              class="full-unstyled-link"
+              class="full-unstyled-link capitalize  text-blue-custom"
               aria-labelledby="CardLink-{{ section_id }}-{{ card_product.id }} Badge-{{ section_id }}-{{ card_product.id }}"
             >
               {{ card_product.title | escape }}
             </a>
-          </h3>
+            <img src="{{ settings.ATC_image | img_url: '20x' }}" alt="Add-to-cart" class="ATC-image w-8">
+          </h2>
           <div class="card-information">
             {%- if show_vendor -%}
               <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
@@ -220,7 +229,23 @@
               </p>
             {%- endif -%}
 
-            {% render 'price', product: card_product, price_class: 'bg-blue-800', show_compare_at_price: true %}
+            {% render 'price', product: card_product, price_class: 'text-blue-custom', show_compare_at_price: true %}
+            {% assign colors = '' %}
+{% assign unique_colors = '' %}
+
+{% for variant in card_product.variants %}
+  {% assign color = variant.option1 %}
+  {% unless unique_colors contains color %}
+    {% assign unique_colors = unique_colors | append: color | append: ',' %}
+  {% endunless %}
+{% endfor %}
+
+{% assign unique_colors_array = unique_colors | split: ',' %}
+{% assign unique_colors_count = unique_colors_array.size | minus: 1 %}
+<hr class="my-7 h-0.5 border-t-0 bg-blue-100 " />
+{% if unique_colors_count>0 %}
+<p class="text-blue-custom">{{ unique_colors_count }} colors available</p>
+{% endif %}
             {%- if card_product.quantity_price_breaks_configured? -%}
               {% if card_product.variants.size == 1 and quick_add == 'bulk' %}
                 {% liquid
@@ -524,6 +549,7 @@
                         <a href="{{ card_product.url }}" class="full-unstyled-link">
                           <h3>{{ card_product.title | escape }}</h3>
                         </a>
+                        <script> const product  = {{ card_product }};console.log(product)</script>
                         {% render 'price', product: card_product, price_class: '', show_compare_at_price: true %}
                         {%- if card_product.quantity_price_breaks_configured? -%}
                           <div class="card__information-volume-pricing-note">
@@ -576,6 +602,7 @@
               {{- 'products.product.on_sale' | t -}}
             </span>
           {%- endif -%}
+          
         </div>
       </div>
     </div>
@@ -590,7 +617,7 @@
   <div class="card-wrapper product-card-wrapper underline-links-hover">
     {% for tag in card_product.tags %}
       {% if tag == "bestSeller" %}
-        <div class="mt-4 py-1 px-2 absolute text-blue-800 bg-yellow-50 text-sm best-seller">Best Seller</div>
+        <div class="mt-4 py-1 px-2 absolute text-blue-custom bg-yellow-50 text-sm best-seller">Best Seller</div>
       {% endif%}
       {% if tag == "50% Off" %}
         <div class="mt-4 py-1 px-2 absolute  text-sm best-seller">50% Off</div>
