--- a/assets/output.css
+++ b/assets/output.css
@@ -604,6 +604,10 @@ video {
   isolation: isolate;
 }
 
+.z-auto {
+  z-index: auto;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -618,22 +622,29 @@ video {
   margin-bottom: 3rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .block {
@@ -660,11 +671,6 @@ video {
   display: none;
 }
 
-.size-full {
-  width: 100%;
-  height: 100%;
-}
-
 .h-0\.5 {
   height: 0.125rem;
 }
@@ -677,12 +683,16 @@ video {
   width: 2.5rem;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-3\/12 {
+  width: 25%;
 }
 
-.w-7\/12 {
-  width: 58.333333%;
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-8 {
@@ -693,12 +703,24 @@ video {
   width: 100%;
 }
 
-.w-3\/12 {
-  width: 25%;
+.w-1\/12 {
+  width: 8.333333%;
 }
 
-.w-4\/6 {
-  width: 66.666667%;
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .transform {
@@ -707,6 +729,10 @@ video {
 
 .flex-row {
   flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .flex-wrap {
@@ -735,6 +761,10 @@ video {
   white-space: nowrap;
 }
 
+.text-nowrap {
+  text-wrap: nowrap;
+}
+
 .rounded-none {
   border-radius: 0px;
 }
@@ -755,11 +785,6 @@ video {
 .bg-blue-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-
-.bg-orange-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
 .bg-pink-300 {
@@ -791,6 +816,15 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -810,36 +844,6 @@ video {
   line-height: 1.25rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-semibold {
   font-weight: 600;
 }
@@ -854,16 +858,6 @@ video {
 
 .italic {
   font-style: italic;
-}
-
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.text-orange-600 {
-  --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity));
 }
 
 .text-transparent {
@@ -890,19 +884,25 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
+  .sm\:w-1\/2 {
+    width: 50%;
+  }
+
+  .sm\:w-3\/12 {
+    width: 25%;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:hidden {
-    display: none;
+  .md\:w-1\/2 {
+    width: 50%;
   }
-}
 
-@media (min-width: 1024px) {
-  .lg\:hidden {
-    display: none;
+  .md\:w-3\/12 {
+    width: 25%;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 }
