--- a/assets/base.css
+++ b/assets/base.css
@@ -2902,7 +2902,7 @@ details-disclosure > details {
   letter-spacing: 0.1rem;
   font-weight: 600;
   line-height: 1;
-  padding: 0.5rem 1.3rem 0.6rem 1.3rem;
+  padding: .9rem .5rem 1rem .6rem;
   text-align: center;
   background-color: rgb(var(--color-badge-background));
   border-color: rgba(var(--color-badge-border), var(--alpha-badge-border));
