--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -64,7 +64,7 @@
     data-product-id="{{ product.id }}"
   >   {% if recommendations.performed and recommendations.products_count > 0 %}
     <ul
-      class=" flex flex-row justify-between"
+      class="flex-wrap flex flex-row justify-between"
       role="list"
     >
       {% assign skip_card_product_styles = false %}
