--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -24,7 +24,7 @@
   <div class="page-width">
     <div class="related-product-heading flex flex-row text-center justify-start items-center my-12">
       <h2 class="text-blue-custom text-6xl inline-richtext mx-5">{{ section.settings.heading }}</h2>
-      <div id="shopAlldivDesktop" class="flex flex-row w-4/6 text-center justify-end items-center ">
+      <div class="ShopAllForDesktop flex-row w-4/6 text-center justify-end items-center ">
         <div
           class="shopAllLine m-2 flex text-transparent border-t-0 "
           style="background-color: {{ section.settings.line_color }}; width: {% if section.settings.show_shop_all %} 85% {% else %} 100% {% endif %}; height: 0.15rem;"
@@ -90,7 +90,38 @@
   {% if section.settings.image_shape == 'arch' %}
     {% render 'mask-arch' %}
   {%- endif -%}
-  <div id="shopAlldivMobile" class="flex flex-row w-100 px-5  z-auto  mb-6 text-center justify-end items-center "></div>
+  <div class=" ShopAllForMobile  flex-row   flex-nowrap justify-center align-center">
+    <div class="flex flex-row w-4/5 text-center justify-start items-center ">
+  <div
+    class="shopAllLine m-2 flex text-transparent border-t-0 "
+    style="background-color: {{ section.settings.line_color }}; width: {% if section.settings.show_shop_all %} 100% {% else %} 100% {% endif %}; height: 0.15rem;"
+  >
+    s
+  </div>
+  </div>
+  {% if section.settings.show_shop_all %}
+    <a
+      class="flex  flex-row items-center text-nowrap  "
+      href="{{ section.settings.shop_all_url }}"
+      style="color: {{ section.settings.link_color }};"
+    >
+      {{ section.settings.link_text }}
+      <svg
+        class="w-10 ml-2"
+        viewBox="0 0 24 24"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+        stroke="{{ section.settings.icon_color }}"
+      >
+        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+        <g id="SVGRepo_iconCarrier">
+          <path d="M6 18L18 6M18 6H9M18 6V15" stroke="{{ section.settings.icon_color }}" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+        </g>
+      </svg>
+    </a>
+  {% endif %}
+</div>
 </div>
 {% schema %}
 {
@@ -303,20 +334,24 @@
 {% endschema %}
 <script defer>
   // This function moves the "Shop All" line to the end of the section for mobile view based on the Figma design
-  document.addEventListener('DOMContentLoaded', function () {
-
+ // this function help to move the shop All line to the end of the section for mobile view as seen in the figma design
+document.addEventListener('DOMContentLoaded', function() {
     // Function to check if the screen width is mobile size
     function isMobileDevice() {
       return window.innerWidth <= 768;
     }
-    console.log('running 2');
+console.log("running 2")
     // Move content if screen is mobile size
     if (isMobileDevice()) {
       var desktopDiv = document.getElementById('shopAlldivDesktop');
       var mobileDiv = document.getElementById('shopAlldivMobile');
       var content = desktopDiv.innerHTML;
+      console.log(content,"this cis onctnet")
       desktopDiv.innerHTML = '';
       mobileDiv.innerHTML = content;
+      mobileDiv.style.display="flex"
+      console.log(mobileDiv.innerHTML)
     }
   });
 </script>
+
